# AgentKanban

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.e2e  Dockerfile.frontend  README.md  compose.yaml  index.html  package.json  playwright.config.ts  playwright.docker.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release-desktop.yml
.playwright-mcp/: page-2026-05-03T08-40-10-703Z.yml  page-2026-05-03T08-40-26-351Z.yml
crates/core/: Cargo.toml
crates/core/src/: domain.rs  error.rs  events.rs  git_ops.rs  harness.rs  lib.rs  storage.rs  task_runner.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  event_sink.rs  lib.rs  main.rs
crates/server/tests/: server_integration.rs
docker/: frontend.nginx.conf
docs/: agent-api-openapi-phase1.yaml
scripts/: dev-axum.mjs  setup-http-smoke.mjs  tauri-wrapper.mjs
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  domain.rs  events.rs  git_ops.rs  harness.rs  lib.rs  storage.rs  task_runner.rs
src-tauri/tests/: domain.rs  git_ops.rs  storage.rs
src/components/: CreateTaskComposer.test.tsx  CreateTaskComposer.tsx  DiffPreview.tsx  ProjectOnboardingPanel.test.tsx  ProjectOnboardingPanel.tsx  ProjectSettings.test.tsx  ProjectSettings.tsx  ProjectSidebar.tsx  PromptCard.tsx  TaskBoard.test.tsx  TaskBoard.tsx  TaskDetailsPanel.test.tsx  TaskDetailsPanel.tsx  TaskDiffWorkspace.tsx  TerminalReplay.tsx
src/lib/: backend.ts  diff.ts  types.test.ts  types.ts
src/store/: useAppStore.test.ts  useAppStore.ts
src/test/: setup.ts
tests/browser/: http-smoke.spec.ts
