[package]
name = "agentkanban-server"
version = "0.1.0"
description = "AgentKanban Axum server with REST API, WebSocket, and static file serving"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[dependencies]
agentkanban-core = { path = "../core" }
anyhow = "1.0"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = "0.29"
